# mwxdump

./: .gitignore  .rooignore  Cargo.toml  README.md  config.toml
.roo/rules/rules-code/: 01-rust-style.md
.roo/rules/rules-doc-writer/: 01-docs-standard.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/app/: context.rs  manager.rs  mod.rs
cli/src/cli/: context.rs  mod.rs
cli/src/cli/commands/: decrypt.rs  dump_memory.rs  key.rs  mod.rs  process.rs  server.rs  version.rs
cli/src/config/: mod.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/errors/: mod.rs
core/src/models/: chatroom.rs  contact.rs  message.rs  mod.rs  session.rs
core/src/utils/: mod.rs
core/src/utils/windows/: file.rs  handle.rs  memory.rs  mod.rs  module_info.rs  process.rs  registry.rs
core/src/wechat/: mod.rs  wechat_version.rs
core/src/wechat/db/: mod.rs
core/src/wechat/decrypt/: cached_key_validator.rs  decrypt_algorithm_v4.rs  decrypt_common.rs  decrypt_files.rs  decrypt_validator.rs  mod.rs  parallel_decrypt.rs
core/src/wechat/key/: key_extractor.rs  key_version.rs  mod.rs  wechatkey.rs
core/src/wechat/key/windows/: mod.rs  win_key_extractor_v4.rs  win_key_validator.rs  win_mem_searcher.rs
core/src/wechat/process/: mod.rs  process_detector.rs  wechat_process_info.rs
core/src/wechat/process/macos/: mod.rs
core/src/wechat/process/windows/: mod.rs  win_process_detector.rs
core/src/wechat/userinfo/: mod.rs
docs/: README.md  async-optimization-implementation-guide.md  integration-implementation-plan.md  key-validation-optimization-design.md  performance-bottleneck-analysis.md  project-integration-analysis.md
docs/architecture/: logging-system-design.md
docs/progress/: logging-system-refactor-report.md
todo/: 1.todo  2.todo
ui/: index.html  package-lock.json  package.json
ui/docs/: README.md  component-library-design-system.md  development-roadmap-milestones.md  implementation-guide.md  modern-ui-architecture-design.md  technical-implementation-plan.md  ui-design-specification.md
ui/src/: App.tsx  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
ui/src/components/features/: StatCard.tsx  StatusIndicator.tsx  WelcomeCard.tsx  index.ts
ui/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx  index.ts
ui/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  index.ts
ui/src/pages/: DataSource.tsx  Overview.tsx  index.ts
ui/src/store/: index.ts
ui/src/styles/: globals.css
ui/src/types/: index.ts
ui/src/utils/: constants.ts  index.ts
