[workspace]
members = [
    "core",
    "cli",
    "ui/src-tauri"
]
resolver = "2"

[workspace.dependencies]
# 共享依赖版本管理
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
tracing = "0.1"
async-trait = "0.1"

# 加密相关
aes = "0.8"
cbc = "0.1"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
hex = "0.4"
zeroize = "1.8"
byteorder = "1.5"

# 压缩
lz4 = "1.28"
flate2 = "1.1"

# 系统信息
sysinfo = "^0.36"

# 并发和异步
futures = "0.3"
num_cpus = "1.16"
crossbeam-channel = "0.5"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }


# 其他工具
regex = "1.11"
once_cell = "1.21"
base64 = "0.22"