[package]
name = "mwxdump-cli"
version = "0.1.0"
edition = "2021"
authors = ["MWXDump Contributors"]
description = "微信数据导出工具 - CLI版本"
license = "MIT"
repository = "https://github.com/your-org/mwxdump"
keywords = ["wechat", "data", "export", "cli"]
categories = ["command-line-utilities", "data-processing"]

[[bin]]
name = "mwxdump"
path = "src/main.rs"

[dependencies]
# 使用共享核心库
mwxdump-core = { path = "../core" }

# CLI 特定依赖
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = { workspace = true }

# HTTP 服务器 (CLI 特有功能)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# 其他 CLI 工具
indicatif = "^0.18"
console = "^0.16"
dialoguer = "0.11"

# 配置文件
toml = "^0.9"
config = "^0.15"

[dev-dependencies]
tempfile = "3.14"
serial_test = "3.2"

[features]
default = ["server"]
server = []