[package]
name = "mwxdump-core"
version = "0.1.0"
edition = "2021"
authors = ["Magic"]
description = "MwXdump 核心功能库 - 微信聊天记录管理工具的共享核心"
license = "AGPL-3"
keywords = ["wechat", "chat", "log", "core"]
categories = ["api-bindings", "cryptography"]

[dependencies]
# 异步运行时
tokio = { workspace = true }
async-trait = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
prost = "0.14"
prost-types = "0.14"

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }

# 加密解密
aes = { workspace = true }
cbc = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
byteorder = { workspace = true }
blake3 = "1.5"

# 压缩
lz4 = { workspace = true }
flate2 = { workspace = true }

# 工具
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
# 并发和异步
futures = { workspace = true }
num_cpus = { workspace = true }
crossbeam-channel = { workspace = true }

# 数据库
sqlx = { workspace = true }

# 系统信息
sysinfo = { workspace = true }

# 平台特定
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_WindowsProgramming",
] }
windows-result = { version = "0.3" }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "^0.2.173"

[build-dependencies]
prost-build = "^0.14"